# cogist

./: .gitignore  CHANGELOG.md  Cogist.spec  LICENSE  README.md  README_zh-CN.md  RELEASE_NOTES_v0.3.2.md  main.py  pyproject.toml  pyrightconfig.json  setup.py  test_refactored_panel.py  test_simple_spinbox.py  test_slider_spinbox.py  test_spinbox_arrows.py  test_spinbox_keyboard.py
.github/: pull_request_template.md
.github/workflows/: build.yml
.trae/rules/: mindmeave.md
assets/color_schemes/: default.json  pastel.json  vibrant.json
assets/templates/: default.json  default2.json
cogist/application/commands/: __init__.py  add_node_command.py  change_style_command.py  command.py  command_history.py  delete_node_command.py  drag_node_command.py  edit_text_command.py  reparent_node_command.py
cogist/application/services/: __init__.py  app_context.py  drag_handler.py  mindmap_service.py  node_service.py
cogist/domain/: __init__.py
cogist/domain/borders/: container_borders.py  decorative_lines.py  registry.py
cogist/domain/colors/: __init__.py  color_theme.py
cogist/domain/connectors/: __init__.py  base.py  bezier_connector.py  orthogonal_connector.py  rounded_orthogonal_connector.py  sharp_first_rounded_connector.py  straight_connector.py
cogist/domain/entities/: __init__.py  edge.py  node.py
cogist/domain/layout/: __init__.py  base.py  default_layout.py  registry.py
cogist/domain/repositories/: __init__.py  mindmap_repository.py
cogist/domain/styles/: __init__.py  enums.py  extended_styles.py  style_config.py  style_resolver.py  templates.py
cogist/domain/templates/: __init__.py  node_template.py
cogist/domain/value_objects/: __init__.py  color.py  position.py
cogist/infrastructure/io/: cgs_serializer.py  json_serializer.py
cogist/infrastructure/repositories/: __init__.py  mindmap_repository.py
cogist/infrastructure/utils/: __init__.py  config_manager.py  platform.py
cogist/presentation/: scene_manager.py
cogist/presentation/adapters/: __init__.py  qt_node_provider.py
cogist/presentation/borders/: __init__.py  base.py  container_borders.py  decorative_lines.py
cogist/presentation/connectors/: base.py  bezier_connector.py  orthogonal_connector.py  rounded_orthogonal_connector.py  sharp_first_rounded_connector.py  straight_connector.py
cogist/presentation/dialogs/: activity_bar.py  style_editor.py  style_panel.py  style_panel_advanced.py  style_panel_color.py  style_panel_old.py
cogist/presentation/items/: edge_item.py  editable_text_item.py  node_item.py
cogist/presentation/views/: mindmap_view.py
docs/: ARCHITECTURE.md  ARCHITECTURE_COMPLIANCE.md  COLOR_DIALOG_MANAGER_DESIGN.md  COLOR_DIALOG_USAGE.md  CONTRIBUTING.md  GITHUB_ACTIONS_BUILD_GUIDE.md  INDEX.md  PROJECT_STATUS.md  README_docs.md  REFACTORING_PROGRESS.md  REFACTORING_SUMMARY.md  ROADMAP.md  STYLE_REFACTORING_PLAN.md  example_color_dialog_migration.py
scripts/: check_architecture.sh  extract_mindmap_view.py  migrate_to_qtpy.py
tests/unit/: __init__.py  test_cgs_serializer.py  test_color_theme.py  test_config_manager.py  test_drag_detection.py  test_extended_styles.py  test_layout_registry.py  test_node_template.py  test_serialization_improvements.py  test_style_serialization.py
(+29 files in other folders)
