[project]
name = "Cogist"
version = "0.1.0"
description = "A Beautiful Mind Mapping Tool with Intelligent Layout Algorithms"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pyside6>=6.8.0",
    "qdarkstyle>=3.2",
    "qt-material>=2.14",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cogist"]

[project.scripts]
cogist = "main:main"

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true

[dependency-groups]
dev = [
    "pyright>=1.1.408",
]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = [
  "E", "W", "F", "I", "N", "UP", "B", "A", "C4", "T20", "SIM", "ARG", "PTH"
]
fixable = ["ALL"]
ignore = ["E501", "T20"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
