[project]
name = "Cogist"
version = "0.5.3"
description = "A Beautiful Mind Mapping Tool with Intelligent Layout Algorithms"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pyqt6==6.8.1",
    "qdarkstyle>=3.2",
    "qt-material>=2.14",
    "pyobjc-framework-CoreText; sys_platform == 'darwin'",
    "qtpy>=2.4.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cogist"]

[project.scripts]
cogist = "main:main"

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true

[dependency-groups]
dev = [
    "pyright>=1.1.408",
    "pytest>=9.0.3",
]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = [
  "E", "W", "F", "I", "N", "UP", "B", "A", "C4", "T20", "SIM", "ARG", "PTH"
]
fixable = ["ALL"]
ignore = [
  "E501",     # Line too long
  "T20",      # Print statements
  "N802",     # Function name should be lowercase (required for Qt event methods)
  "ARG002",   # Unused method argument (kept for interface consistency)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
